# game_engine

./: .gitignore  CMakeLists.txt  Makefile  vcpkg.json
assets/: tree2.glb
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt  vulkan_context.cpp  vulkan_context.hpp  vulkan_presenter.cpp  vulkan_presenter.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
src/backend/core/: CMakeLists.txt  vk_backend_ctx.cpp  vk_backend_ctx.hpp  vk_device.cpp  vk_result.hpp
src/backend/frame/: CMakeLists.txt  vk_commands.cpp  vk_commands.hpp  vk_frame_manager.cpp  vk_frame_manager.hpp
src/backend/presentation/: CMakeLists.txt  vk_presenter.cpp  vk_presenter.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/backend/profiling/: profiling_logger.cpp  profiling_logger.hpp
src/backend/render/: CMakeLists.txt  camera.hpp  camera_controller.cpp  camera_controller.hpp  mesh_gpu.hpp  renderer.cpp  renderer.hpp  vk_pipeline.cpp  vk_pipeline.hpp
src/backend/render/resources/: CMakeLists.txt
src/backend/resources/: CMakeLists.txt  vk_buffer.cpp  vk_depth_image.cpp  vk_material_sets.cpp  vk_material_sets.hpp  vk_per_frame_uniform.cpp  vk_uploader.cpp  vk_vertex_layout.hpp
src/backend/resources/buffers/: CMakeLists.txt  vk_buffer.cpp  vk_buffer.hpp  vk_memory_utils.hpp  vk_per_frame_uniform_buffers.cpp  vk_per_frame_uniform_buffers.hpp
src/backend/resources/descriptors/: CMakeLists.txt  vk_material_sets.cpp  vk_material_sets.hpp  vk_per_frame_sets.cpp  vk_per_frame_sets.hpp  vk_shader_interface.cpp  vk_shader_interface.hpp
src/backend/resources/images/: CMakeLists.txt  vk_depth_image.cpp  vk_depth_image.hpp  vk_image.cpp
src/backend/resources/texture/: CMakeLists.txt  vk_image.cpp  vk_image.hpp  vk_texture.hpp  vk_texture_uploader.cpp  vk_texture_uploader.hpp  vk_texture_utils.cpp
src/backend/resources/textures/: CMakeLists.txt  vk_texture.hpp
src/backend/resources/upload/: CMakeLists.txt  vk_buffer_uploader.cpp  vk_buffer_uploader.hpp  vk_texture_uploader.cpp  vk_texture_uploader.hpp
src/backend/shaders/: CMakeLists.txt  shader.frag  shader.vert
src/engine/: CMakeLists.txt
src/engine/app/: CMakeLists.txt  app.cpp  app.hpp
src/engine/assets/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.hpp  image_data.hpp  stb_image_loader.cpp  stb_image_loader.hpp
src/engine/assets/gltf/: CMakeLists.txt
src/engine/assets/stb_image/: CMakeLists.txt
src/engine/camera/: CMakeLists.txt  camera.cpp  camera.hpp  camera_ubo.hpp
src/engine/geometry/: CMakeLists.txt  mesh_builder.hpp  mesh_factory.hpp  primitives.cpp  primitives.hpp  transform.hpp
src/engine/mesh/: mesh_data.hpp  vertex.hpp
src/platform/: CMakeLists.txt
src/platform/input/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp
src/platform/window/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp
